--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cloud_firestore: ^3.1.10
   syncfusion_flutter_charts: ^19.4.54
   provider: ^6.0.2
+  firebase_auth: ^3.3.18
 dev_dependencies:
   flutter_test:
     sdk: flutter
